--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: saborine
 description: "A new Flutter project."
 publish_to: 'none'
 
-version: 4.0.0+5
+version: 1.0.0+8
 
 environment:
   sdk: ^3.6.0
@@ -13,7 +13,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_mobile_ads: ^5.2.0   # Corrigido para a dependência correta de anúncios móveis
   flutter_native_splash: ^2.4.4
-  in_app_purchase: ^3.2.0
+  in_app_purchase: ^3.2.1
+  shared_preferences: ^2.5.1
 
 dev_dependencies:
   flutter_test:
